Issue 38: Make the header sticky on mobile and desktop.

--- a/assets/src/css/base/_structure.scss
+++ b/assets/src/css/base/_structure.scss
@@ -12,12 +12,20 @@
 	overflow: hidden;
 }
 
-.no-scroll {
-	@media ( query( max, tablet ) ) {
-		position: absolute;
-		overflow: hidden;
-		width: 100%;
-		height: 100vh;
+#page {
+	padding-top: 60px;
+
+	@media ( query( min, tablet ) ) {
+		padding-top: 49px;
+	}
+
+	&.no-scroll {
+		@media ( query( max, tablet ) ) {
+			position: absolute;
+			overflow: hidden;
+			width: 100%;
+			height: 100vh;
+		}
 	}
 }
 
